--- a/HomePage.html
+++ b/HomePage.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <title>WP Mini Project</title>
     <link rel="stylesheet" type="text/css" href="Header.css">
-    <link rel="stylesheet" type="text/css" href="Body.css">
+    <link rel="stylesheet" type="text/css" href="HomePageBody.css">
+    <link rel="stylesheet" type="text/css" href="Body-Container-1.css">
     <link rel="stylesheet" type="text/css" href="Footer.css">
 </head>
     
@@ -80,6 +81,14 @@
                     between 2010 and 2030, and reach net zero around 2050.
                 </p>
             </div>
+            <div class="info">
+                <p class="big-text">1/3</p>
+                <p class="title-text"></p>
+                <p class="description">
+                    Climate pledges under The Paris Agreement cover only one third of the 
+                    emissions reductions needed to keep the world below 2°C.
+                </p>
+            </div>
         </div>
     </div>
 
@@ -87,9 +96,5 @@
         <!-- Footer content goes here -->
         <p>&copy; 2023 Climate Action. All rights reserved.</p>
     </div>
-    <script src="MainPageScript.js"></script>
 </body>
-</html>
-
-
 </html>
