--- a/AboutUs.html
+++ b/AboutUs.html
@@ -62,6 +62,21 @@
                     </div>
                 </div>
             </div>
+            <div class="contact-container">
+            <div class="contact">
+                <p class="contact-text">
+                    PASSIONATE PEOPLE
+                </p>
+                <div class="join">
+                    <p class="join-text">
+                        Join Our Team!
+                    </p>
+                    <button class="joinUs">
+                        Join now
+                    </button>
+                </div>
+            </div>
+            </div>
         </div>
     </div>
 
