--- a/User/AboutUs.html
+++ b/User/AboutUs.html
@@ -49,11 +49,13 @@
                         <div class="member-pic">
                             <img class="member-img" src="../images/intro-img.png" alt="Member's Photo">
                         </div>
-                        <p class="member-intro">Hi!</p>
+                        <p class="member-intro">DANIEL TENG WEI CHUNG</p>
                     </div>
                     <div class="member">
-                        <div class="member-pic"></div>
-                        <p class="member-intro">Hi!</p>
+                        <div class="member-pic">
+
+                        </div>
+                        <p class="member-intro">BRIAN TING CHIN ING</p>
                     </div>
                 </div>
                 <div class="members">
@@ -61,11 +63,13 @@
                         <div class="member-pic">
                             <img class="member-img" src="../images/intro-img.png" alt="Member's Photo">
                         </div>
-                        <p class="member-intro">Hi!</p>
+                        <p class="member-intro">ALVIN LEOW YAN KAI</p>
                     </div>
                     <div class="member">
-                        <div class="member-pic"></div>
-                        <p class="member-intro">Hi!</p>
+                        <div class="member-pic">
+                            
+                        </div>
+                        <p class="member-intro">TOH KANG LUN</p>
                     </div>
                 </div>
             </div>
