--- a/User/Contact.html
+++ b/User/Contact.html
@@ -53,7 +53,8 @@
                     </p>
                 </div>
                 <div class="contact-right">
-                    <form action="http://localhost/utm/WP_MINI_PROJECT/php/contactTable.php" method="post" name="contact">
+                    <form action="http://localhost/utm/WP_MINI_PROJECT/php/contactTable.php" method="post"
+                        name="contact">
                         <table cellspacing="10">
                             <tbody>
                                 <tr>
@@ -61,7 +62,8 @@
                                         <label for="name">Name :</label>
                                     </td>
                                     <td>
-                                        <input type="text" class="contact-input" name="name" placeholder="Enter your name">
+                                        <input type="text" class="contact-input" name="name"
+                                            placeholder="Enter your name" required maxlength="40">
                                     </td>
                                 </tr>
                                 <tr>
@@ -69,7 +71,8 @@
                                         <label for="email">Email :</label>
                                     </td>
                                     <td>
-                                        <input type="email" class="contact-input" name="email" placeholder="Enter your email">
+                                        <input type="email" class="contact-input" name="email"
+                                            placeholder="Enter your email" required>
                                     </td>
                                 </tr>
                                 <tr>
@@ -77,7 +80,8 @@
                                         <label for="phone">Phone Number :</label>
                                     </td>
                                     <td>
-                                        <input type="text" class="contact-input" name="phone" placeholder="Enter your phone number">
+                                        <input type="text" class="contact-input" name="phone"
+                                            placeholder="Enter your phone number" required maxlength="11">
                                     </td>
                                 </tr>
                                 <tr>
@@ -85,14 +89,14 @@
                                         <label for="message">Your Message :</label>
                                     </td>
                                     <td>
-                                        <textarea  class="contact-input" name="message" id="message" 
-                                        cols="30" rows="10" placeholder="Enter your message"></textarea>
+                                        <textarea class="contact-input" name="message" id="message" cols="30" rows="10"
+                                            placeholder="Enter your message" required></textarea>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td></td>
                                     <td class="center-align">
-                                        <button type="submit" class="submit-button">Submit</button>
+                                        <button type="submit" class="submit-button" onclick="validateForm()">Submit</button>
                                     </td>
                                 </tr>
                             </tbody>
@@ -113,6 +117,40 @@
         document.addEventListener("DOMContentLoaded", function() {
             getIsLoggedIn();
         });
+
+        function validateForm() {
+            var errorMessages = [];
+
+            var name = document.forms["contact"]["name"].value;
+            if (name === "") {
+                errorMessages.push("Name field is required!");
+            }
+
+            var email = document.forms["contact"]["email"].value;
+            var emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+            if (!emailRegex.test(email)) {
+                errorMessages.push("Invalid email format!");
+            }
+
+            var phone = document.forms["contact"]["phone"].value;
+            var phoneRegex = /^\d+$/;
+            if (!phoneRegex.test(phone)) {
+                errorMessages.push("Phone Number must only contain numbers!");
+            }
+
+            var message = document.forms["contact"]["message"].value;
+            if (message === "") {
+                errorMessages.push("Message field is required!");
+            }
+
+            if (errorMessages.length > 0) {
+                var errorMessage = "Please fix the following errors:\n\n" + errorMessages.join("\n");
+                alert(errorMessage);
+                return false;
+            } else {
+                return true;
+            }
+        }
     </script>
 </body>
 
