--- a/User/AboutUs.html
+++ b/User/AboutUs.html
@@ -42,18 +42,23 @@
             <div class="intro-container">
                 <p class="title">Our Team</p>
                 <p class="intro">Introduction</p>
+                    Our project have been activrly advocating the importance of spreading SDG awareness among youths and communities, where through this website introduction, we aimed to 
+                    deliver impactful and appealing messages regarding the awareness of spreading environmental awareness tpwards the communities. And at the same time, we also aimed to provide 
+                    opportunities and platform for the communities to sign up and join us in a series of events and competition to together spread the environmental awareness towards the 
+                    communities. 
+                </p>
             </div>
             <div class="member-container">
                 <div class="members">
                     <div class="member">
                         <div class="member-pic">
-                            <img class="member-img" src="../images/intro-img.png" alt="Member's Photo">
+                            <img class="member-img" src="../images/DTWC.jpg" alt="Member's Photo">
                         </div>
                         <p class="member-intro">DANIEL TENG WEI CHUNG</p>
                     </div>
                     <div class="member">
                         <div class="member-pic">
-
+                            <img class="member-img" src="../images/Brian.jpg" alt="Member's Photo">
                         </div>
                         <p class="member-intro">BRIAN TING CHIN ING</p>
                     </div>
@@ -61,13 +66,13 @@
                 <div class="members">
                     <div class="member">
                         <div class="member-pic">
-                            <img class="member-img" src="../images/intro-img.png" alt="Member's Photo">
+                            <img class="member-img" src="../images/Alvin.jpg" alt="Member's Photo">
                         </div>
                         <p class="member-intro">ALVIN LEOW YAN KAI</p>
                     </div>
                     <div class="member">
                         <div class="member-pic">
-                            
+                            <img class="member-img" src="../images/TKL.jpg" alt="Member's Photo">
                         </div>
                         <p class="member-intro">TOH KANG LUN</p>
                     </div>
