--- a/User/loginpage.html
+++ b/User/loginpage.html
@@ -4,6 +4,10 @@
   <style>
     body 
     {
+      background-image: url("../images/background1.png");
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: auto;
       font-family: Arial, sans-serif;
       background-color: #f2f2f2;
       margin: 0;
@@ -38,8 +42,8 @@
     .container input[type="submit"] 
     {
       width: 100%;
-      background-color: #4caf50;
-      color: #fff;
+      background-color: #a27b5f;
+      color: white;
       padding: 10px;
       border: none;
       border-radius: 3px;
@@ -48,7 +52,8 @@
 
     .container input[type="submit"]:hover 
     {
-      background-color: #45a049;
+      background-color: #6d604a;
+      color: white;
     }
   </style>
 </head>
