--- a/User/registration.html
+++ b/User/registration.html
@@ -5,6 +5,10 @@
   <style>
     body 
     {
+      background-image: url("../images/background1.png");
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: auto;
       font-family: Arial, sans-serif;
       background-color: #f2f2f2;
       margin: 0;
@@ -42,8 +46,8 @@
     .container input[type="submit"] 
     {
       width: 100%;
-      background-color: #4caf50;
-      color: #fff;
+      background-color: #a27b5f;
+      color: white;
       padding: 10px;
       border: none;
       border-radius: 3px;
@@ -52,7 +56,8 @@
 
     .container input[type="submit"]:hover 
     {
-      background-color: #45a049;
+      background-color: #6d604a;
+      color: white;
     }
   </style>
 
